BJ Gain: $ 0.0 Win %: 100.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_TS
BJ Gain: $ 4.4 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5
BJ Gain: $ -0.11 Win %: 42.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB8
BJ Gain: $ 3.68 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB8
BJ Gain: $ 2.73 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB8
BJ Gain: $ 4.15 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB8
BJ Gain: $ -0.82 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB8
BJ Gain: $ 3.2 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB8
BJ Gain: $ 1.81 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB8
BJ Gain: $ 1.55 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB8
BJ Gain: $ 2.85 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB8
BJ Gain: $ 1.44 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB8
BJ Gain: $ 3.71 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR2
BJ Gain: $ 3.59 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_TS
BJ Gain: $ 0.12 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BJ Gain: $ 0.53 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR2
BJ Gain: $ 3.99 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BJ Gain: $ 3.04 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BJ Gain: $ 4.46 Win %: 100.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BJ Gain: $ -0.59 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BJ Gain: $ 3.78 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BJ Gain: $ 2.58 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BJ Gain: $ 3.29 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
BJ Gain: $ 1.86 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BJ Gain: $ 3.2 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BJ Gain: $ 1.67 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BJ Gain: $ 3.2 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_TS
BJ Gain: $ -5.54 Win %: 14.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BJ Gain: $ -0.04 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
BJ Gain: $ 1.87 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV_TS
BJ Gain: $ 3.22 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL_TS
BJ Gain: $ 3.51 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BJ Gain: $ 4.4 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IR2
BJ Gain: $ 3.71 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BJ Gain: $ 2.76 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BJ Gain: $ 3.47 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BJ Gain: $ 0.11 Win %: 57.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BJ Gain: $ 3.16 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BJ Gain: $ 1.67 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BJ Gain: $ 4.22 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BJ Gain: $ 3.32 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BJ Gain: $ 4.4 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BJ Gain: $ 4.09 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_DB8
BJ Gain: $ -3.24 Win %: 28.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BJ Gain: $ 1.84 Win %: 71.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BJ Gain: $ 3.0 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BJ Gain: $ 0.28 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_PM
BJ Gain: $ 4.05 Win %: 85.00 in 7 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TS
BJ Gain: $ 0.78 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
BJ Gain: $ 0.74 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
BJ Gain: $ 2.29 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
BJ Gain: $ 3.18 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
BJ Gain: $ -1.28 Win %: 42.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
BJ Gain: $ 1.99 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
BJ Gain: $ 1.72 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
BJ Gain: $ -0.73 Win %: 42.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
BJ Gain: $ 1.01 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
BJ Gain: $ -0.56 Win %: 42.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
BJ Gain: $ 1.93 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_TR_IR5
BJ Gain: $ 1.11 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_TR_TS
BJ Gain: $ -3.55 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_TR_QP
BJ Gain: $ 0.56 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_QP_IR5
BJ Gain: $ -0.07 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_TR
BJ Gain: $ 1.66 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_AV
BJ Gain: $ 1.82 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_AL
BJ Gain: $ -4.08 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV_QP
BJ Gain: $ 1.79 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM_TR
BJ Gain: $ 1.92 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM_AV
BJ Gain: $ 3.63 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM_AL
BJ Gain: $ -1.82 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM_QP
BJ Gain: $ 1.3 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_IT_QL
BJ Gain: $ -1.83 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_IT_QP
BJ Gain: $ 1.3 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_IT_TS
BJ Gain: $ 3.02 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_AO_AC
BJ Gain: $ -2.04 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_QP_PM
BJ Gain: $ 0.97 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_AV_TS
BJ Gain: $ 2.72 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_AL_TS
BJ Gain: $ 3.11 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_RV
BJ Gain: $ 2.73 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_IR5
BJ Gain: $ 1.73 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_TR
BJ Gain: $ 1.66 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_AV
BJ Gain: $ 3.33 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_AL
BJ Gain: $ 1.5 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_VI
BJ Gain: $ 3.81 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_LI
BJ Gain: $ -2.68 Win %: 14.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_QP
BJ Gain: $ 3.3 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_HM
BJ Gain: $ 2.73 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_SS
BJ Gain: $ 3.02 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_QL
BJ Gain: $ 2.73 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_DB30
BJ Gain: $ 3.02 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_AO
BJ Gain: $ 3.02 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_AC
BJ Gain: $ 1.3 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_IT
BJ Gain: $ -0.27 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_PM
BJ Gain: $ 2.51 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB5_CS5_TS
BJ Gain: $ -4.9 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_TR_QP_DB15
BJ Gain: $ -1.78 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_TR_DB15
BJ Gain: $ -4.71 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AV_DB15
BJ Gain: $ -2.05 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AL_DB15
BJ Gain: $ -4.46 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_QP_DB15
BJ Gain: $ -1.47 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM_TR_DB15
BJ Gain: $ -4.78 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AV_DB15
BJ Gain: $ -4.37 Win %: 14.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM_QP_DB15
BJ Gain: $ -0.3 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QL_DB15
BJ Gain: $ -4.97 Win %: 14.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QP_DB15
BJ Gain: $ -2.45 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_TR_IR4
BJ Gain: $ 1.11 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_TR_TS
BJ Gain: $ -5.59 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_TR_QP
BJ Gain: $ -6.17 Win %: 0 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_QP_IR4
BJ Gain: $ -0.54 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_TR
BJ Gain: $ -5.35 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AV
BJ Gain: $ -1.94 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AL
BJ Gain: $ -6.01 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV_QP
BJ Gain: $ -0.93 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM_TR
BJ Gain: $ -5.93 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AV
BJ Gain: $ -1.03 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AL
BJ Gain: $ -5.82 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM_QP
BJ Gain: $ -0.27 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QL
BJ Gain: $ -5.86 Win %: 28.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QP
BJ Gain: $ 0.46 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_IT_TS
BJ Gain: $ -6.92 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_AO_AC
BJ Gain: $ -0.52 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_QP_PM
BJ Gain: $ -2.88 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_AV_TS
BJ Gain: $ -0.23 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_AL_TS
BJ Gain: $ 2.1 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_RV
BJ Gain: $ -0.26 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_IR4
BJ Gain: $ -0.46 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_TR
BJ Gain: $ -5.35 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_AV
BJ Gain: $ -0.7 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_AL
BJ Gain: $ -3.64 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_VI
BJ Gain: $ 0.52 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_LI
BJ Gain: $ -4.07 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_QP
BJ Gain: $ 2.91 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_HM
BJ Gain: $ 2.52 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_SS
BJ Gain: $ 3.04 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_QL
BJ Gain: $ 0.77 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_DB15
BJ Gain: $ 2.56 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_AO
BJ Gain: $ -1.39 Win %: 42.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_AC
BJ Gain: $ -0.08 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_IT
BJ Gain: $ 1.03 Win %: 57.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_PM
BJ Gain: $ 1.85 Win %: 71.00 in 7 days with algo TB2_HL_LO_QM_OB1_OS1_CB3_CS3_TS
BJ Gain: $ 0.58 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
BJ Gain: $ 1.75 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
BJ Gain: $ 1.84 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
BJ Gain: $ 2.4 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
BJ Gain: $ 0.16 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
BJ Gain: $ 2.62 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
BJ Gain: $ 2.61 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
BJ Gain: $ -1.0 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
BJ Gain: $ 1.38 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
BJ Gain: $ -1.46 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
BJ Gain: $ 5.23 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_TR_IR5
BJ Gain: $ 4.15 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_TR_TS
BJ Gain: $ -1.6 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_TR_QP
BJ Gain: $ 1.6 Win %: 42.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_QP_IR5
BJ Gain: $ 4.34 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_TR
BJ Gain: $ 3.04 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_AV
BJ Gain: $ 5.09 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_AL
BJ Gain: $ -3.79 Win %: 42.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV_QP
BJ Gain: $ 5.26 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM_TR
BJ Gain: $ 4.55 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM_AV
BJ Gain: $ 5.39 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM_AL
BJ Gain: $ -2.36 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM_QP
BJ Gain: $ 2.96 Win %: 100.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_IT_QL
BJ Gain: $ -2.44 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_IT_QP
BJ Gain: $ 3.54 Win %: 100.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_IT_TS
BJ Gain: $ 5.1 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_AO_AC
BJ Gain: $ -0.91 Win %: 57.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_QP_PM
BJ Gain: $ -0.23 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_AV_TS
BJ Gain: $ 3.72 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_AL_TS
BJ Gain: $ 5.54 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_RV
BJ Gain: $ 4.87 Win %: 100.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_IR5
BJ Gain: $ 5.42 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_TR
BJ Gain: $ 3.04 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_AV
BJ Gain: $ 5.09 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_AL
BJ Gain: $ 2.77 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_VI
BJ Gain: $ 4.0 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_LI
BJ Gain: $ -2.44 Win %: 28.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_QP
BJ Gain: $ 5.21 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_HM
BJ Gain: $ 4.11 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_SS
BJ Gain: $ 5.1 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_QL
BJ Gain: $ 2.41 Win %: 71.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_DB30
BJ Gain: $ 5.1 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_AO
BJ Gain: $ 5.1 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_AC
BJ Gain: $ 3.31 Win %: 100.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_IT
BJ Gain: $ 0.71 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_PM
BJ Gain: $ 3.8 Win %: 85.00 in 7 days with algo TB1_OC_QM_OB3_OS3_CB4_CS4_TS
